--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -16,5 +16,8 @@
     ],
     "csstree/validator": true
   },
-  "ignoreFiles": ["build/**", "dist/**", "**/reset*.css", "**/bootstrap*.css", "**/*.js", "**/*.jsx"]
+  "ignoreFiles": ["build/**", "dist/**", "**/reset*.css", "**/bootstrap*.css", "**/*.js", "**/*.jsx"],
+  "editor.codeActionsOnSave": {
+    "source.fixAll": true
+  }
 }
